@@ -1,4 +1,5 @@
 1.0.12
+ * fix toString of hint destination tokens (CASSANDRA-4568)
  * (Hadoop) fix setting key length for old-style mapred api (CASSANDRA-4534)
  * (Hadoop) fix iterating through a resultset consisting entirely
    of tombstoned rows (CASSANDRA-4466)
